--- a/hotel.html
+++ b/hotel.html
@@ -1,4 +1,4 @@
-HOTEL- MANAGEMENT SYSTEM
+HOTEL MANAGEMENT SYSTEM
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -63,6 +63,3 @@ HOTEL- MANAGEMENT SYSTEM
     <script src="script.js"></script>
 </body>
 </html>
-
-
-
